--- a/chat.html
+++ b/chat.html
@@ -35,6 +35,8 @@ header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primar
 .alert-dot { position:absolute; top:0; right:0; width:12px; height:12px; background:red; border-radius:50%; animation: blink 1s infinite; }
 @keyframes blink { 50% { opacity:0; } }
 
+#currentPartner { font-weight:bold; color:var(--color-name); }
+
 #mainContent { display:flex; flex:1; overflow:hidden; height: calc(100vh - 108px); }
 
 #userList { width:200px; background:#fff; border-right:1px solid #ddd; overflow-y:auto; padding:8px; }
@@ -43,38 +45,43 @@ header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primar
 .userItem img { width:28px; height:28px; border-radius:50%; }
 
 #chatContainer { flex:1; display:flex; flex-direction:column; overflow:hidden; position:relative; }
-
-#chatWindow { flex:1; overflow-y:auto; padding:10px; background:white; position:relative; }
-
-.msg { margin:4px 0; padding:6px 8px; border-radius:8px; max-width:80%; word-wrap:break-word; position:relative; cursor:pointer; font-size:0.95em; }
+#chatHeader { display:flex; justify-content:space-between; align-items:center; padding:6px 10px; border-bottom:1px solid #ddd; background:#fafafa; position:relative; gap:4px; flex-wrap:wrap; }
+#chatHeader .chatHeaderButtons { display:flex; gap:6px; flex-wrap:wrap; }
+#chatWindow { flex:1; overflow-y:auto; padding:6px; background:white; }
+.msg { margin:4px 0; padding:6px; border-radius:8px; max-width:80%; word-wrap:break-word; position:relative; cursor:pointer; }
 .userMsg { background:#e0f7e9; align-self:flex-end; text-align:right; }
 .otherMsg { background:#fff8dc; align-self:flex-start; text-align:left; }
 
-#chatControlButtons {
-  display:flex;
-  width:100%;
-  gap:4px;
-  margin-bottom:4px;
-}
-#chatControlButtons button {
-  flex:1;
-  background:white;
-  color:var(--color-primary);
-  border:1px solid var(--color-primary);
-  padding:8px;
-  border-radius:5px;
-  cursor:pointer;
-}
-#chatControlButtons button:hover { background:var(--color-primary); color:white; }
-
 #chatInput { display:flex; border-top:1px solid #ddd; background:white; padding:4px; }
-#chatInput input { flex:1; padding:10px; font-size:1em; border:1px solid #ccc; border-radius:5px; }
-#chatInput button { background:var(--color-primary); color:white; border:none; padding:10px 14px; margin-left:4px; border-radius:5px; cursor:pointer; }
+#chatInput input { flex:1; padding:8px; font-size:1em; border:1px solid #ccc; border-radius:5px; }
+#chatInput button { background:var(--color-primary); color:white; border:none; padding:8px 12px; margin-left:4px; border-radius:5px; cursor:pointer; }
 #chatInput button:hover { background:var(--color-primary-hover); }
 
 #adSidebar { width:280px; background:#f1f1f1; border-left:1px dashed #ccc; padding:8px; text-align:center; overflow-y:auto; }
 
 footer { background:white; color:#555; text-align:center; padding:6px; font-size:0.85em; border-top:1px solid #ddd; }
+
+.mobileFloatingButtons {
+  display:none;
+  position:fixed;
+  bottom:70px;
+  left:0;
+  right:0;
+  display:flex;
+  gap:4px;
+  padding:0 4px;
+  z-index:60;
+}
+.mobileFloatingButtons button {
+  flex:1;
+  padding:10px;
+  font-size:0.9em;
+  border:none;
+  border-radius:5px;
+  cursor:pointer;
+}
+#hideChatBtnMobile { background:red; color:white; }
+#blockBtnMobile { background:var(--color-primary); color:white; }
 
 @media(max-width:768px){
   html, body { height:100%; overflow:visible; }
@@ -82,9 +89,12 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
   #topBar { position:fixed; top:50px; left:0; right:0; z-index:100; width:100%; height:40px; }
   #mobileUserLine { display:flex; position:fixed; top:90px; left:0; right:0; padding:6px 4px; background:#fafafa; border-bottom:1px solid #ddd; z-index:100; overflow-x:auto; white-space:nowrap; }
   #mainContent { flex-direction:column; margin-top:130px; margin-bottom:120px; height:auto; overflow-y:auto; }
-  #chatWindow { flex:1; overflow-y:auto; width:100%; padding-bottom:120px; max-height: calc(100vh - 280px); }
+  #chatWindow { flex:1; overflow-y:auto; width:100%; padding-bottom:80px; max-height: calc(100vh - 250px); }
   #chatInput { position:fixed; bottom:0; left:0; right:0; padding:4px; background:white; z-index:50; width:100%; }
-  #chatControlButtons { position:fixed; bottom:50px; left:0; right:0; padding:0 4px; z-index:50; }
+  footer { position:fixed; bottom:0; left:0; right:0; z-index:100; width:100%; height:40px; }
+  #userList, #adSidebar { display:none; }
+
+  .mobileFloatingButtons { display:flex; }
 }
 </style>
 </head>
@@ -107,10 +117,13 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
 <div id="mainContent">
   <div id="userList"></div>
   <div id="chatContainer">
+    <div id="chatHeader">
+      <div id="currentPartner">🌍 Global</div>
+    </div>
     <div id="chatWindow"></div>
-    <div id="chatControlButtons">
-      <button id="hideChatBtn" onclick="hideChat()" style="display:none;">Apagar chat</button>
-      <button id="blockBtn" onclick="toggleBlock()" style="display:none;">Bloquear</button>
+    <div class="mobileFloatingButtons">
+      <button id="hideChatBtnMobile">Apagar chat</button>
+      <button id="blockBtnMobile">Bloquear</button>
     </div>
     <div id="chatInput">
       <input type="text" id="msgInput" placeholder="Digite sua mensagem..." disabled>
@@ -123,7 +136,6 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
 <footer>© 2025 Славянский клуб — Aprenda Russo e Português com diversão!</footer>
 
 <script>
-// --- Firebase ---
 const firebaseConfig = {apiKey:"AIzaSyCYJCgfil5HKrCWtB14zwdicDaEcldHU6A",authDomain:"dimitry-rusian.firebaseapp.com",databaseURL:"https://dimitry-rusian-default-rtdb.firebaseio.com",projectId:"dimitry-rusian",storageBucket:"dimitry-rusian.appspot.com",messagingSenderId:"449029666805",appId:"1:449029666805:web:feaf575a7b7e6f234a52bc"};
 firebase.initializeApp(firebaseConfig);
 
@@ -140,17 +152,19 @@ const alertaLogin=document.getElementById("alertaLogin");
 const onlineCount=document.getElementById("onlineCount");
 const generalBtn=document.getElementById("generalBtn");
 const mobileUserLine=document.getElementById("mobileUserLine");
-const blockBtn=document.getElementById("blockBtn");
-const hideChatBtn=document.getElementById("hideChatBtn");
+const currentPartnerEl=document.getElementById("currentPartner");
+const hideChatBtnMobile=document.getElementById("hideChatBtnMobile");
+const blockBtnMobile=document.getElementById("blockBtnMobile");
 
-let currentChat="global";
+let currentChat="chatGlobal";
 let privateChatListener=null;
 let alertIcons={};
 let userData={};
 let currentPartnerUID=null;
 let blockedUsers={};
-let hiddenChats={}; // para mensagens apagadas localmente
+let hiddenChats={};
 
+// LOGIN/LOGOUT
 loginBtn.onclick=()=>auth.signInWithPopup(new firebase.auth.GoogleAuthProvider());
 logoutBtn.onclick=()=>auth.signOut();
 
@@ -178,14 +192,175 @@ auth.onAuthStateChanged(user=>{
   }
 });
 
-// --- restante do código do chat (persistência, mensagens, bloqueio) ---
-// Apagar chat agora apenas para usuário local
+// Carregar bloqueados
+async function loadBlockedUsers(){
+  if(!userData.uid) return;
+  const snap = await db.ref(`blocked/${userData.uid}`).once("value");
+  blockedUsers = snap.val()||{};
+}
+
+// Bloquear/Desbloquear
+function toggleBlock(){
+  if(!currentPartnerUID || !userData.uid) return;
+  const ref=db.ref(`blocked/${userData.uid}/${currentPartnerUID}`);
+  if(blockedUsers[currentPartnerUID]){
+    ref.remove();
+    blockedUsers[currentPartnerUID]=false;
+    blockBtnMobile.textContent="Bloquear";
+    alert("Usuário desbloqueado.");
+  } else {
+    ref.set(true);
+    blockedUsers[currentPartnerUID]=true;
+    blockBtnMobile.textContent="Desbloquear";
+    alert("Usuário bloqueado.");
+  }
+}
+blockBtnMobile.onclick=toggleBlock;
+
+// APAGAR CHAT LOCAL
 function hideChat(){
-  if(confirm("Apagar chat localmente?")){
+  if(confirm("Apagar este chat localmente?")){
     hiddenChats[currentChat]=true;
     chatWindow.innerHTML="<div style='text-align:center;margin:10px;color:#555;'>💬 Chat apagado localmente.</div>";
   }
 }
+hideChatBtnMobile.onclick=hideChat;
+
+// Atualizar lista de usuários
+function updateUserList(){
+  db.ref("online").once("value").then(snap=>{
+    const users=snap.val()||{};
+    userList.innerHTML="";
+    mobileUserLine.innerHTML="";
+    alertIcons={};
+
+    const divGlobal=document.createElement("div");
+    divGlobal.className="userItem";
+    divGlobal.innerHTML=`<img src="https://cdn-icons-png.flaticon.com/512/3126/3126540.png"><span>Global</span>`;
+    divGlobal.onclick=()=>startGlobalChat();
+    userList.appendChild(divGlobal);
+
+    const mobGlobal=document.createElement("div");
+    mobGlobal.className="userItemMobile";
+    mobGlobal.innerHTML=`<img src="https://cdn-icons-png.flaticon.com/512/3126/3126540.png" title="Global">`;
+    mobGlobal.onclick=()=>startGlobalChat();
+    mobileUserLine.appendChild(mobGlobal);
+
+    if(userData.uid){
+      const divSelf=document.createElement("div");
+      divSelf.className="userItem";
+      divSelf.innerHTML=`<img src="${userData.photo}"><span>${userData.name}</span>`;
+      divSelf.onclick=()=>alert("Este é você!");
+      userList.appendChild(divSelf);
+
+      const mobSelf=document.createElement("div");
+      mobSelf.className="userItemMobile";
+      mobSelf.innerHTML=`<img src="${userData.photo}" title="${userData.name}">`;
+      mobSelf.onclick=()=>alert("Este é você!");
+      mobileUserLine.appendChild(mobSelf);
+    }
+
+    for(const [uid,u] of Object.entries(users)){
+      if(!u.name || uid===userData.uid) continue;
+      const div=document.createElement("div");
+      div.className="userItem";
+      div.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}"><span>${u.name}</span>`;
+      div.onclick=()=>startPrivateChat(uid,u.name);
+      userList.appendChild(div);
+
+      const mob=document.createElement("div");
+      mob.className="userItemMobile";
+      mob.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}" title="${u.name}">`;
+      mob.onclick=()=>startPrivateChat(uid,u.name);
+      mobileUserLine.appendChild(mob);
+
+      alertIcons[uid]={desktop:div,mobile:mob};
+    }
+
+    onlineCount.textContent=`👥 Usuários online: ${Object.keys(users).length}`;
+  });
+}
+
+// CHAT GLOBAL
+function startGlobalChat(){
+  currentChat="chatGlobal";
+  currentPartnerUID=null;
+  currentPartnerEl.textContent="🌍 Global";
+  chatWindow.innerHTML="";
+  db.ref("chatGlobal").once("value").then(snap=>{
+    snap.forEach(m=>{
+      if(!hiddenChats[currentChat]) showMessage(m.val(),"chatGlobal");
+    });
+  });
+}
+
+// CHAT PRIVADO
+function startPrivateChat(uid,name){
+  currentPartnerUID=uid;
+  currentChat=[userData.uid,uid].sort().join("_");
+  currentPartnerEl.textContent=name;
+  blockBtnMobile.style.display="inline-block";
+  blockBtnMobile.textContent = blockedUsers[uid]?"Desbloquear":"Bloquear";
+  chatWindow.innerHTML=hiddenChats[currentChat]?"<div style='text-align:center;margin:10px;color:#555;'>💬 Chat apagado localmente.</div>":"<div style='text-align:center;margin:10px;color:#555;'>💬 Conversa privada com "+name+"</div>";
+
+  if(privateChatListener) privateChatListener.off();
+  privateChatListener=db.ref("private/"+currentChat);
+  privateChatListener.on("child_added",snap=>{
+    const msg=snap.val();
+    if(hiddenChats[currentChat]) return;
+    showMessage(msg,currentChat);
+    if(msg.uid!==userData.uid){
+      const icon=alertIcons[msg.uid]?.desktop;
+      if(icon && !icon.querySelector(".alert-dot")){
+        const dot=document.createElement("div");
+        dot.className="alert-dot";
+        icon.appendChild(dot);
+        const dotMob=dot.cloneNode();
+        alertIcons[msg.uid].mobile.appendChild(dotMob);
+      }
+    }
+  });
+}
+
+// ENVIAR MENSAGEM
+sendBtn.onclick=sendMessage;
+msgInput.addEventListener("keypress",e=>{if(e.key==="Enter")sendMessage();});
+
+function sendMessage(){
+  const text=msgInput.value.trim();
+  if(!text || !userData.uid) return;
+  if(currentPartnerUID && blockedUsers[currentPartnerUID]){
+    alert("Você bloqueou este usuário ou está bloqueado.");
+    return;
+  }
+  const path=currentChat==="chatGlobal"?"chatGlobal":"private/"+currentChat;
+  db.ref(path).push({user:userData.name,uid:userData.uid,text,timestamp:Date.now()});
+  msgInput.value="";
+}
+
+// MOSTRAR MENSAGEM
+function showMessage(msg,room){
+  if(room!==currentChat && room!=="chatGlobal") return;
+  if(hiddenChats[currentChat]) return;
+  const div=document.createElement("div");
+  div.className=msg.uid===userData.uid?"msg userMsg":"msg otherMsg";
+  div.textContent=`${msg.user}: ${msg.text}`;
+  div.onclick=()=>{ removeAlertDot(msg.uid); };
+  chatWindow.appendChild(div);
+  chatWindow.scrollTop = chatWindow.scrollHeight;
+}
+
+// REMOVER ALERT DOT
+function removeAlertDot(uid){
+  const icon=alertIcons[uid]?.desktop;
+  if(icon) icon.querySelector(".alert-dot")?.remove();
+  const iconMob=alertIcons[uid]?.mobile;
+  if(iconMob) iconMob.querySelector(".alert-dot")?.remove();
+}
+
+// VOLTAR AO CHAT GLOBAL
+generalBtn.onclick=startGlobalChat;
+
 </script>
 </body>
 </html>
